# SC

./: README.md
projetalimentation/: .coverage  README.md  demo.py  pyproject.toml
projetalimentation/src/: .coverage  __class__.py  __init__.py  __main__.py  aliments.py  app.py  base.py  besoins.py  data.py  diagramme.py  main.py  optimisation.py
projetalimentation/src/projet_a/: Diagramme2.py  __init__.py  aliments.py  app.py  base.py  besoins.py  data.py  diagramme.py  ilfautunnom.py  main.py  optimisation.py  test_aliment.py  test_besoins.py  test_optimisation.py
projetalimentation/src/projetalimentation/: __class__.py  __init__.py  __main__.py  aliments.py  base.py  besoins.py  data.py  diagramme.py  optimisation.py  test.py
projetalimentation/test/: test_aliment.py  test_aliments.py  test_besoins.py
test/: test_aliment.py  test_besoins.py
