[project]
name = "projetalimentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Barat", email = "thomas.barat@etu.uni-tours.fr" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
projetalimentation = "projetalimentation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
