[project]
name = "projetalimentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas Barat", email = "thomas.barat@etu.uni-tours.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.0.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]

[project.scripts]
projetalimentation = "projetalimentation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
